- Finished https://trello.com/c/Jsd2jmiy - Moved the images in their own frame with a "update image" button - Added a "save" button under the 'summary'. - Refactor editUserController.js - Fixed cover image is too large

--- a/static/css/patient-profile.scss
+++ b/static/css/patient-profile.scss
@@ -453,3 +453,9 @@ todo {
     }
   }
 }
+
+#image-info {
+  .thumbnail.cover {
+    width: 100%;
+  }
+}
